# name: TestUpdate.test
  <class 'dict'> {
    'id': 'fb085f7f',
    'name': 'Technicians',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': True,
    },
    'users': <class 'list'> [
      <class 'dict'> {
        'administrator': False,
        'handle': 'fcarpenter',
        'id': 'da42dca3',
      },
      <class 'dict'> {
        'administrator': False,
        'handle': 'chelsea34',
        'id': '09d01419',
      },
      <class 'dict'> {
        'administrator': False,
        'handle': 'michelle34',
        'id': 'f60bae36',
      },
    ],
  }
---
# name: TestUpdate.test_not_found[json]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'Not found',
  }
---
# name: test_create[201][json]
  <class 'dict'> {
    'id': 'bf1b993c',
    'name': 'Test',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'users': <class 'list'> [
    ],
  }
---
# name: test_create[201][location]
  'https://virtool.example.com/groups/bf1b993c'
---
# name: test_create[400][json]
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'Group already exists',
  }
---
# name: test_create[400][location]
  None
---
# name: test_find
  <class 'list'> [
    <class 'dict'> {
      'id': 'fb085f7f',
      'name': 'musicians',
    },
    <class 'dict'> {
      'id': '7cf872dc',
      'name': 'hydrogeologists',
    },
  ]
---
# name: test_get[200]
  <class 'dict'> {
    'id': 'fb085f7f',
    'name': 'musicians',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'users': <class 'list'> [
      <class 'dict'> {
        'administrator': False,
        'handle': 'qtaylor',
        'id': '3cbb22cc',
      },
    ],
  }
---
# name: test_get[404]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'Not found',
  }
---
# name: test_remove[204][json]
  None
---
# name: test_remove[204][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'bf1b993c',
      'groups': <class 'list'> [
      ],
    },
    <class 'dict'> {
      '_id': '3cbb22cc',
      'groups': <class 'list'> [
        '7cf872dc',
      ],
    },
    <class 'dict'> {
      '_id': 'da42dca3',
      'groups': <class 'list'> [
      ],
    },
    <class 'dict'> {
      '_id': '09d01419',
      'groups': <class 'list'> [
        '7cf872dc',
      ],
    },
  ]
---
# name: test_remove[404][json]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'Not found',
  }
---
# name: test_remove[404][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'bf1b993c',
      'groups': <class 'list'> [
      ],
    },
    <class 'dict'> {
      '_id': '3cbb22cc',
      'groups': <class 'list'> [
        'fb085f7f',
        '7cf872dc',
      ],
    },
    <class 'dict'> {
      '_id': 'da42dca3',
      'groups': <class 'list'> [
        'fb085f7f',
      ],
    },
    <class 'dict'> {
      '_id': '09d01419',
      'groups': <class 'list'> [
        '7cf872dc',
      ],
    },
  ]
---
